--- a/.env
+++ b/.env
@@ -1,19 +1,20 @@
-APP_NAME=Multipolygon
-APP_SHORT_NAME=Multipolygon
-APP_MONOGRAM=MPG
-APP_TWITTER=@multipolygon
-APP_DESCRIPTION=Blog and feed favourites.
+APP_NAME=Feeds
+APP_SHORT_NAME=Feeds
+APP_MONOGRAM=F
+APP_TWITTER=
+APP_DESCRIPTION=Blog and feeds.
 
-API_HOST=https://api.blob.multipolygon.net/
-APP_HOST=https://blog.multipolygon.net/
-CONTENT_HOST=https://feeds.blog.multipolygon.net/
-OSM_HOST=https://a.tile.openstreetmap.org/
+API_HOST=
+APP_HOST=
+CONTENT_HOST=
+CONTENT_HOST_DEV=
+OSM_HOST=
 
 TF_API_KEY=
 PASSWORD_SALT=
 EXTERNAL_HOSTS=
 
-THEME_COLOR=#2962FF
+THEME_COLOR=#0000FF
 BACKGROUND_COLOR=#ffffff
 
 LIMITED=
