--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,14 @@
-CONTENT_HOST=http://feederjs.localhost:3032/
-CONTENT_HOST_DEV=http://feederjs.localhost:3032/
+APP_NAME=Multipolygon
+APP_SHORT_NAME=Multipolygon
+APP_MONOGRAM=MPG
+APP_TWITTER=@multipolygon
+APP_DESCRIPTION=Blog and feed favourites.
+
+API_HOST=https://api.blog.multipolygon.net/
+APP_HOST=https://blog.multipolygon.net/
+CONTENT_HOST=https://feeds.multipolygon.net/
+CONTENT_HOST_DEV=
+OSM_HOST=https://osm.multipolygon.net/
+
+THEME_COLOR=#2962FF
+BACKGROUND_COLOR=#ffffff
