--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ API_HOST=
 APP_HOST=
 CONTENT_HOST=
 CONTENT_HOST_DEV=
-OSM_HOST=
+OSM_HOST=https://a.tile.openstreetmap.org/
 
 TF_API_KEY=
 PASSWORD_SALT=
