--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "scripts": {
         "dev": "next dev -H 0.0.0.0 -p 3031",
+        "jsgl": "jsgl --local .",
         "build": "webpack --config lib/leaflet.webpack.config.cjs && next build",
         "export": "next export",
         "prod": "next start",
@@ -13,16 +14,19 @@
         "serve": "serve -l 3031 out",
         "serveFeeds": "serve --cors -l 3032 ../feeds/"
     },
-    "author": "Reilly Beacom",
-    "license": "",
+    "author": "multipolygon",
+    "license": "MIT",
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.56",
+        "builtin-status-codes": "^3.0.0",
+        "js-green-licenses": "^2.0.1",
         "js-yaml": "^3.14.0",
         "leaflet": "^1.6.0",
         "leaflet-fullscreen": "^1.0.2",
         "leaflet.markercluster": "^1.4.1",
+        "license-checker-webpack-plugin": "^0.1.5",
         "lodash": "^4.17.19",
         "mdi-material-ui": "^6.18.0",
         "moment": "^2.27.0",
@@ -32,6 +36,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-json-tree": "^0.12.1",
+        "react-simple-code-editor": "^0.11.0",
         "underscore.string": "^3.3.5",
         "webpack-cli": "^3.3.12"
     },
