View and filter feeds by tag.

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ OSM_HOST=https://a.tile.openstreetmap.org/
 TF_API_KEY=
 PASSWORD_SALT=
 EXTERNAL_HOSTS=
+ALLOW_ALL_HOSTS=
 
 THEME_COLOR=#0000FF
 BACKGROUND_COLOR=#ffffff
