--- a/.env.production
+++ b/.env.production
@@ -5,10 +5,10 @@ APP_TWITTER=@multipolygon
 APP_DESCRIPTION=Blog and feed favourites.
 
 API_HOST=https://api.blog.multipolygon.net/
-APP_HOST=https://blog.multipolygon.net/
-CONTENT_HOST=https://feeds.multipolygon.net/
+APP_HOST=https://jsonfeedviewer.multipolygon.net/
+CONTENT_HOST=https://jsonfeedviewer.multipolygon.net/demo/
 CONTENT_HOST_DEV=
-OSM_HOST=https://osm.multipolygon.net/
+OSM_HOST=https://{s}.tile.openstreetmap.org/
 
 THEME_COLOR=#2962FF
 BACKGROUND_COLOR=#ffffff
